workshop01/manifest/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mymcpapp
  namespace: workshop01
spec:
  parentRefs:
    - name: mygw
      namespace: aalwg
  hostnames:
    - "172.25.39.200.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mymcpapp
          port: 80
